--- a/style.css
+++ b/style.css
@@ -27,58 +27,24 @@ body{
     transition-duration: 0.5s;
   }
 
-/* new */
-/* 
-body {
-    margin: 0;
-    padding: 0;
-    background-color: brown;
-    background-image: URL('images/woodbg.png');
-    align-items: center;
-    justify-content: center;
+.formInput{
+    background-color: transparent;
+    border: transparent;
+    border-bottom: dashed 3px #4916d4;
+    margin-bottom: 20px;
+}
+.formInput:focus {
+    outline: transparent;
+}
 
-  }
-  
-  .page {
-    position: relative;
-    margin: 40px auto;
-    width: 300px;
-    height: 350px;
-    background: #fff;
-    padding: 1rem;
-  }
-  
-  .page::before,
-  .page::after {
-    content: '';
-    position: absolute;
-    bottom: 10px;
-    width: 40%;
-    height: 10px;
-    box-shadow: 0 5px 14px rgba(0,0,0,.7);
-    z-index: -1;
-    transition: all .3s ease-in-out;
-  }
-  
-  .page::before {
-    left: 15px;
-    transform: skew(-5deg) rotate(-5deg);
-  }
-  
-  .page::after {
-    right: 15px;
-    transform: skew(5deg) rotate(5deg);
-  }
-  
-  .page:hover::before,
-  .page:hover::after {
-    box-shadow: 0 2px 14px rgba(0,0,0,.4);
-  }
-  
-  .page:hover::before {
-    left: 5px;
-  }
-  
-  .page:hover::after {
-    right: 5px;
-  } */
+.submit {
+    padding: 2px;
+    color: #fff;
+    background: repeating-linear-gradient(45deg, #333333 0, #333333 1%, #4f4f4f 0, #4f4f4f 10%) 0 / 1px 1px;
+    background-size: 30px 30px;
+    color: whitesmoke;
+    border-color: transparent;
+    font-size: larger;
+    font-weight: bold;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
