--- a/style.css
+++ b/style.css
@@ -57,3 +57,8 @@ body{
     font-weight: bold;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.mydetails {
+    padding: 1rem;
+    color: rgb(7, 7, 49);
+}
